# pytemplate

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  README.md  environment.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  docker.yml  docs.yml  test-docker.yml  test-multiplatform.yml  test.yml  update.yml
environments/: deploy-base.yml  deploy.yml  docs-base.yml  docs.yml  local-base.yml  local.yml  requirements-base.txt  requirements.txt  test-base.yml  test.yml  utils.yml
notebooks/: example.ipynb
pytemplate/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
pytemplate/docs/: mkdocs.yml
pytemplate/docs/docs/: index.md
pytemplate/docs/docs/usage/: cli.md  library.md
pytemplate/pytemplate/: __init__.py  __main__.py
pytemplate/pytemplate/subpackage/: module.py
pytemplate/src/pytemplate/: __init__.py  __main__.py
pytemplate/src/pytemplate/subpackage/: module.py
pytemplate/tests/functional/: test_pytemplate.py
pytemplate/tests/unit/pytemplate/subpackage/: test_module.py
search/: search_index.json
usage/cli/: index.html
utils/: conda_lock.py  pip_lock.py
