[metadata]
name = pytemplate
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# automatically find all packages
# searching recursively starting from directory where this file is
packages = find:

# add all requirements here
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
# don't treat resources as a package
# note that you still need to add __init__.py to every subdirectory in resources
# importlib needs that to work
exclude = resources

[options.entry_points]
console_scripts =
    pytemplate = pytemplate.__main__:main

[options.package_data]
# instead treat resources as data
pytemplate = resources/*